[project]
name = "study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=0.6.0",
    "mkdocs-roamlinks-plugin>=0.1.3",
    "pymdown-extensions>=10.0",
]
